# src/core/routes/permission.routes.js
@@ -1,13 +1,24 @@
 import express from "express";
 import {
+  getMyPermissions,
   getAllPermissions,
   getRolePermissions,
   setRolePermissions,
   deleteRolePermission,
+  createPermission,
+  updatePermission,
+  deletePermission,
 } from "../controllers/permission.controller.js";
 import { protect, authorizeRoles } from "../middleware/auth.middleware.js";
 
 const router = express.Router();
+
+router.get(
+  "/my-permissions",
+  /* #swagger.tags = ['Permission'] */
+  protect,
+  getMyPermissions,
+);
 
 router.get(
   "/",
@@ -15,6 +26,14 @@ router.get(
   protect,
   authorizeRoles(1, 2),
   getAllPermissions,
+);
+
+router.post(
+  "/",
+  /* #swagger.tags = ['Permission'] */
+  protect,
+  authorizeRoles(1, 2),
+  createPermission,
 );
 
 router.get(
@@ -32,6 +51,7 @@ router.put(
   authorizeRoles(1, 2),
   setRolePermissions,
 );
+
 router.delete(
   "/role",
   /* #swagger.tags = ['Permission'] */
@@ -39,5 +59,23 @@ router.delete(
   authorizeRoles(1, 2),
   deleteRolePermission,
 );
+
+router.put(
+  "/:id",
+  /* #swagger.tags = ['Permission'] */
+  protect,
+  authorizeRoles(1, 2),
+  updatePermission,
+);
+
+router.delete(
+  "/:id",
+  /* #swagger.tags = ['Permission'] */
+  protect,
+  authorizeRoles(1, 2),
+  deletePermission,
+);
+
+
 
 export default router;
